# vibeintent

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.zh-TW.md  pyproject.toml
docs/: publishing.md
src/vibeintent/: cli.py
tests/: test_cli.py
