[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeintent"
version = "0.1.0"
description = "Tool-agnostic intent and diff reports for AI-assisted coding sessions."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "VibeIntent" }]
license = { text = "MIT" }
keywords = ["ai", "coding", "git", "diff", "code-review"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.scripts]
vibeintent = "vibeintent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

